--- a/PitchingManagement/Base.lproj/Main.storyboard
+++ b/PitchingManagement/Base.lproj/Main.storyboard
@@ -112,15 +112,15 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9X7-2L-YdG">
-                                <rect key="frame" x="274" y="54" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="289" y="54" width="31" height="30"/>
+                                <state key="normal" title="次月"/>
                                 <connections>
                                     <action selector="nextBtn:" destination="yul-If-E8f" eventType="touchUpInside" id="wgg-OG-qDv"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ify-C8-Qm5">
-                                <rect key="frame" x="0.0" y="54" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="0.0" y="54" width="31" height="30"/>
+                                <state key="normal" title="前月"/>
                                 <connections>
                                     <action selector="backBtn:" destination="yul-If-E8f" eventType="touchUpInside" id="K42-cR-6vA"/>
                                 </connections>
@@ -131,13 +131,13 @@
                             <constraint firstItem="sbM-je-neL" firstAttribute="leading" secondItem="ZBP-SA-vFl" secondAttribute="leading" id="2BA-vx-r89"/>
                             <constraint firstItem="sbM-je-neL" firstAttribute="top" secondItem="Mwy-qU-MOr" secondAttribute="bottom" constant="10" id="6t9-kC-uti"/>
                             <constraint firstItem="ZBP-SA-vFl" firstAttribute="bottom" secondItem="sbM-je-neL" secondAttribute="bottom" id="9Cf-kg-Uxa"/>
-                            <constraint firstItem="9X7-2L-YdG" firstAttribute="leading" secondItem="Mwy-qU-MOr" secondAttribute="trailing" constant="93" id="E4Z-FK-QcP"/>
                             <constraint firstItem="ZBP-SA-vFl" firstAttribute="trailing" secondItem="sbM-je-neL" secondAttribute="trailing" id="H9U-u1-nrE"/>
                             <constraint firstItem="Mwy-qU-MOr" firstAttribute="centerX" secondItem="wHd-cT-Ysa" secondAttribute="centerX" id="K2G-q9-Vg8"/>
+                            <constraint firstItem="9X7-2L-YdG" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Mwy-qU-MOr" secondAttribute="trailing" constant="8" symbolic="YES" id="RHj-wX-f1S"/>
                             <constraint firstItem="ify-C8-Qm5" firstAttribute="leading" secondItem="ZBP-SA-vFl" secondAttribute="leading" id="Tmd-dM-ZW7"/>
                             <constraint firstItem="Mwy-qU-MOr" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ify-C8-Qm5" secondAttribute="trailing" constant="8" symbolic="YES" id="YOK-Fo-aTB"/>
                             <constraint firstItem="ify-C8-Qm5" firstAttribute="top" secondItem="ZBP-SA-vFl" secondAttribute="top" constant="10" id="dIE-Yk-wc2"/>
-                            <constraint firstItem="ZBP-SA-vFl" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="9X7-2L-YdG" secondAttribute="trailing" id="tJe-cz-VUH"/>
+                            <constraint firstItem="ZBP-SA-vFl" firstAttribute="trailing" secondItem="9X7-2L-YdG" secondAttribute="trailing" id="tJe-cz-VUH"/>
                             <constraint firstItem="Mwy-qU-MOr" firstAttribute="bottom" secondItem="ify-C8-Qm5" secondAttribute="bottom" id="tJg-PK-R4P"/>
                             <constraint firstItem="9X7-2L-YdG" firstAttribute="bottom" secondItem="ify-C8-Qm5" secondAttribute="bottom" id="zpU-5Z-RsX"/>
                         </constraints>
@@ -244,7 +244,7 @@
                     <tabBarItem key="tabBarItem" title="Item 1" id="QHk-xP-lt8"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="G9u-Bh-goS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -263,7 +263,7 @@
                     <tabBarItem key="tabBarItem" title="Item 2" id="jz1-0L-Lgs"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="o4P-G4-vYW">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
